fix customer form overflow and pos

--- a/src/css/components/views/category/customer/customer-form.css
+++ b/src/css/components/views/category/customer/customer-form.css
@@ -3,13 +3,13 @@
     background-color: #fff;
     border-radius: var(--border-radius);
     position: absolute;
-    top: 50%;
+    top: 46%;
     left: 50%;
     padding: 32px;
     transform: translate(-50%, -50%);
     max-height: 100vh;
     max-width: 100vw;
-    overflow: auto;
+    overflow: visible;
     user-select: none;
   }
   
